--- a/index.html
+++ b/index.html
@@ -533,21 +533,39 @@
                   <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
-           <!--  <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/numera.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Books 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/books-3.jpg" title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>NUMERA Website</h4>
+                  <a href="assets/img/portfolio/numera.jpg" title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
-            </div> --><!-- End Portfolio Item -->
+            </div>
 
-          </div><!-- End Portfolio Container -->
+             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/numera.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>NUMERA Website</h4>
+                  <a href="assets/img/portfolio/numera.jpg" title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/semmap2.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>SEMMAPP Website</h4>
+                  <a href="assets/img/portfolio/semmap2.jpg" title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+          </div>
 
         </div>
 
