--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/myprfile.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/mursleen_profile1.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -589,7 +589,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Responsive website design and development</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">Responsive website design and development</a></h4>
               <p class="description">I create websites that look great and work seamlessly on all devices.</p>
             </div>
           </div>
@@ -598,7 +598,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">WordPress theme customization (Elementor, WP Bakery)</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">WordPress theme customization (Elementor, WP Bakery)</a></h4>
               <p class="description">I customize themes using Elementor and WP Bakery for attractive layouts.</p>
             </div>
           </div><!-- End Service Item -->
@@ -606,7 +606,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Frontend development with React.js</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">Frontend development with React.js</a></h4>
               <p class="description"> I develop interactive and dynamic user interfaces using React.js.</p>
             </div>
           </div><!-- End Service Item -->
@@ -614,7 +614,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">API integration and frontend-backend connectivity</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">API integration and frontend-backend connectivity</a></h4>
               <p class="description"> I integrate APIs to ensure smooth data flow between frontend and backend.</p>
             </div>
           </div><!-- End Service Item -->
@@ -622,7 +622,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Website performance optimization and bug fixing</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">Website performance optimization and bug fixing</a></h4>
               <p class="description">I improve website speed and fix issues for better user experience.</p>
             </div>
           </div><!-- End Service Item -->
@@ -630,28 +630,28 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Landing page design for marketing campaigns</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">Landing page design for marketing campaigns</a></h4>
               <p class="description"> I design high-converting landing pages to support your marketing goals.</p>
             </div>
           </div><!-- End Service Item -->
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Cross-platform mobile app development with React Native</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">Cross-platform mobile app development with React Native</a></h4>
               <p class="description"> I build apps that work efficiently on both Android and iOS.</p>
             </div>
           </div><!-- End Service Item -->
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">UI/UX design implementation for mobile apps</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">UI/UX design implementation for mobile apps</a></h4>
               <p class="description"> I implement intuitive designs to ensure a seamless app user experience.</p>
             </div>
           </div><!-- End Service Item -->
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Deployment support for Google Play Store and App Store:</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">Deployment support for Google Play Store and App Store:</a></h4>
               <p class="description"> I assist in deploying your app on both Android and iOS stores successfully.</p>
             </div>
           </div><!-- End Service Item -->
