--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/icon.jpg" rel="icon">
-  <link href="assets/img/icon.jpg" rel="apple-touch-icon">
+  <link href="assets/img/icon3.png" rel="icon">
+  <link href="assets/img/icon3.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -264,7 +264,7 @@
      <!--  <a href="https://www.instagram.com/itx_mursleen11" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a> -->
       <a href="https://www.linkedin.com/in/mursleen-mushtaq-242556181/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
       <a href="https://teams.microsoft.com/l/chat/0/0?users=mursleenmushtaq237@gmail.com" class="microsoft-teams" target="_blank">
-        <i class="bi bi-microsoft-teams""></i>
+        <i class="bi bi-microsoft-teams"></i>
       </a>
     </div>
 
@@ -272,7 +272,7 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i> About Us</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li><!-- 
@@ -293,7 +293,7 @@
             <li><a href="#">Dropdown 4</a></li>
           </ul>
         </li> -->
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact Us</a></li>
       </ul>
     </nav>
 
@@ -876,23 +876,26 @@
      <section id="contact" class="contact section">
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
-            <h2>Contact</h2>
+            <h2>Contact Us</h2>
         </div><!-- End Section Title -->
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
             <div class="row gy-4">
                 <div class="col-lg-5">
                     <div class="info-wrap">
+                        <div class="contact-header">
+                            <h2><i class="fas fa-envelope me-2"></i>Contact Information</h2>
+                        </div>
                         <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="bi bi-geo-alt flex-shrink-0"></i>
                             <div>
-                                <h3>Address</h3>
+                                <h3>Address:</h3>
                                 <p>Kamahan - Lidher Rd, Formanites Housing Scheme Lahore</p>
                             </div>
                         </div><!-- End Info Item -->
 
                         <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-                            <i class="fas fa-phone"></i>
+                            <i class="bi bi-telephone flex-shrink-0"></i>
                             <div>
                                 <h3>Call Now:</h3>
                                 <p>+923053135437</p>
@@ -900,7 +903,7 @@
                         </div><!-- End Info Item -->
 
                         <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-                            <i class="fas fa-envelope"></i>
+                            <i class="bi bi-envelope flex-shrink-0"></i>
                             <div>
                                 <h3>Make a query:</h3>
                                 <p>mursleenmushtaq237@gmail.com</p>
@@ -922,30 +925,29 @@
                 <div class="col-lg-7">
                     <div class="contact-form-container">
                         <div class="contact-header">
-                            <h2><i class="fas fa-envelope me-2"></i>Contact Us</h2>
-                            <p>We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
+                            <h2><i class="fas fa-envelope me-2"></i>Ready to Get Started?</h2>
                         </div>
                         
                         <form id="contact-form" method="post">
                             <div class="row gy-4">
                                 <div class="col-md-6">
-                                    <label for="name-field" class="pb-2">Your Name</label>
-                                    <input type="text" name="name" id="name-field" class="form-control" required>
+                                    <label for="name-field" class="pb-2">Your Name:*</label>
+                                    <input type="text" name="name" id="name-field" class="form-control" required placeholder="Enter name">
                                 </div>
 
                                 <div class="col-md-6">
-                                    <label for="email-field" class="pb-2">Your Email</label>
-                                    <input type="email" class="form-control" name="email" id="email-field" required>
+                                    <label for="email-field" class="pb-2">Your Email:*</label>
+                                    <input type="email" class="form-control" name="email" id="email-field" required placeholder="Enter email">
                                 </div>
 
                                 <div class="col-12">
-                                    <label for="subject-field" class="pb-2">Subject</label>
-                                    <input type="text" class="form-control" name="subject" id="subject-field" required>
+                                    <label for="subject-field" class="pb-2">Subject:*</label>
+                                    <input type="text" class="form-control" name="subject" id="subject-field" required placeholder="Subject">
                                 </div>
 
                                 <div class="col-12">
-                                    <label for="message-field" class="pb-2">Message</label>
-                                    <textarea class="form-control" name="message" rows="6" id="message-field" required></textarea>
+                                    <label for="message-field" class="pb-2">Message:*</label>
+                                    <textarea class="form-control" name="message" rows="6" id="message-field" required placeholder="Text here!"></textarea>
                                 </div>
 
                                 <div class="col-12">
